--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <div id="demo"></div>     
-        <script src="http://localhost:8080/out/index.js"></script>  
+        <script src="https://localhost:8080/out/index.js"></script>  
     </body>
 </html>
