--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="demo"></div>     
-        <script src="./out/index.js"></script>  
+        <div id="demo"></div>
+        <script src='./out/entry.js'></script>
     </body>
 </html>
